--- a/ErrorReporting/app/src/main/res/values/strings.xml
+++ b/ErrorReporting/app/src/main/res/values/strings.xml
@@ -1,11 +1,23 @@
 <resources>
     <string name="app_name">Felrapportera</string>
-    <string name="hej">Hej</string>
     <string name="AddComment">Fyll i din kommentar till felrapporten.</string>
-    <string name="Delete">RADERA</string>
     <string name="Update">UPPDATERA</string>
     <string name="Grade">Gradering av problem</string>
     <string name="Grade2">Gradering av problem:</string>
     <string name="UppdateraFelkategori">Uppdatera felkategori</string>
     <string name="Check"> ✔</string>
+    <string name="Symptom">Symptom</string>
+    <string name="Date">Datum</string>
+    <string name="Comment">Kommentar</string>
+    <string name="ChooseSymptom">Välj det symptom som bäst stämmer in:</string>
+    <string name="ShowReports">Visa skickade rapporter</string>
+    <string name="PressHere">Klicka här ▼</string>
+    <string name="PressToComplete">Tryck på gul felrapport för att komplettera.</string>
+    <string name="Problem">Vad är felet?</string>
+    <string name="Severity">Hur illa är felet?</string>
+    <string name="First">1</string>
+    <string name="Second">2</string>
+    <string name="Third">3</string>
+    <string name="Send">SKICKA</string>
+
 </resources>
